set image height to view height

--- a/src/style.css
+++ b/src/style.css
@@ -3,6 +3,11 @@
   position: relative;
 }
 
+#i3.force-img-full-height a img {
+	width:auto !important;
+	height:100vh !important;
+}
+
 .close,
 .swap,
 .page-number {
